--- a/styles.css
+++ b/styles.css
@@ -65,7 +65,7 @@ body{
 
 }
 .footer{
-    background-color: #D0F5BE;
+    background-color: lightseagreen;
 }
 .navbarr{
     background-color:  #5ff3bc;
